新增全新草图

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -9,3 +9,5 @@ serverClose = server close the channel.
 receiveNotice = [receive]
 noConnect = not connect the server.
 sendNotice = [send]
+serverMode = serverMode
+clientMode = clientMode
