国际化预发布的页面功能

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,3 +1,4 @@
+title = websocket debug tool
 serverAddressDesc = server address:
 protocol = protocol:
 connect = connect
@@ -11,3 +12,8 @@ noConnect = not connect the server.
 sendNotice = [send]
 serverMode = serverMode
 clientMode = clientMode
+start = start
+stop = stop
+localPort = localPort
+client = client
+allConnects = allConnects
