--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,3 +1,4 @@
+title = websocket 调试工具
 serverAddressDesc = 服务器地址：
 protocol = 协议：
 connect = 连接
@@ -11,3 +12,8 @@ noConnect = 未连接服务器。
 sendNotice = 【发送】
 serverMode = 服务器模式
 clientMode = 客户端模式
+start = 启动
+stop = 关闭
+localPort = 本地端口号
+client = 客户端
+allConnects = 所有连接
