完成server模式核心功能 easy-server

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,6 +1,5 @@
 title = websocket debug tool
 serverAddressDesc = server address:
-protocol = protocol:
 connect = connect
 disconnect = disconnect
 send = send
@@ -19,3 +18,4 @@ client = client
 allConnects = allConnects
 error = [error]
 urlError = url is not support
+success = server is ok
