--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,6 +1,5 @@
 title = websocket 调试工具
 serverAddressDesc = 服务器地址：
-protocol = 协议：
 connect = 连接
 disconnect = 断开连接
 send = 发送
@@ -19,3 +18,4 @@ client = 客户端
 allConnects = 所有连接
 error = 【错误】
 urlError = 请输入正确的地址!
+success = 服务器启动成功
